<resources>
    <string name="app_name">Mood Tracker</string>
    <string name="introduction">The idea is simple: every day, you record your
    mood within this application</string>
    <string name="mood_question">How is your mood today?</string>
    <string name="mood_question_exp">The mood is set for an entire day, but at any
    point during the day, you can reopen the app to change your mood. At midnight
    the mood at that point in time will be saved as the mood of the day, and you can start
    setting the mood for a new day</string>
    <string name="smiley_emoji">Smiley emoji</string>
    <string name="add_note">Add Note</string>
    <string name="share">Share</string>
    <string name="mood_history">Mood history</string>
    <string name="appetite_question">How was your appetite?</string>
    <string name="sleep_question">How long did you sleep?</string>
    <string name="breakfast_question">Did you have breakfast?</string>
    <string name="lunch_question">Did you have lunch?</string>
    <string name="dinner_question">Did you have dinner?</string>

    <string-array name="moods">
        <item>All</item>
        <item>Cheerful</item>
        <item>Happy</item>
        <item>Meh</item>
        <item>Sad</item>
        <item>Angry</item>
    </string-array>

    <string-array name="meals">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
</resources>