<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView_ask_appetite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="28sp"
        android:textStyle="bold"
        android:paddingVertical="20dp"
        android:text="@string/appetite_question" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_breakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/breakfast_question" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_lunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/lunch_question" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_dinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/dinner_question" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom">

        <Button
            android:id="@+id/button_next_appetite"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="Next"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:onClick="goToSleepView" />
    </RelativeLayout>

</LinearLayout>