<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/dashboard_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#b5e892"
    tools:context=".activities.DashboardActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="580dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="90dp"
            android:src="@drawable/ic_smile_1"
            android:contentDescription="@string/smiley_emoji" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">

        <ImageButton
            android:id="@+id/button_create_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#b5e892"
            android:onClick="launchCreateEntryActivity"
            android:src="@drawable/ic_add_circle"
            android:contentDescription="@string/add_note" />

        <ImageButton
            android:id="@+id/button_entry_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/button_create_entry"
            android:layout_toEndOf="@+id/button_create_entry"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"
            android:background="#b5e892"
            android:src="@drawable/ic_history"
            android:contentDescription="@string/mood_history"
            android:onClick="launchEntryHistoryActivity" />

        <ImageButton
            android:id="@+id/button_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="#b5e892"
            android:src="@drawable/ic_stats"
            android:contentDescription="View statistics"
            android:onClick="launchStatisticsActivity"/>

    </RelativeLayout>

</LinearLayout>